; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_pm2fb.c_WAIT_FIFO.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_pm2fb.c_WAIT_FIFO.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pm2fb_par = type { i32 }

@PM2R_IN_FIFO_SPACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pm2fb_par*, i64)* @WAIT_FIFO to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WAIT_FIFO(%struct.pm2fb_par* %0, i64 %1) #0 {
  %3 = alloca %struct.pm2fb_par*, align 8
  %4 = alloca i64, align 8
  store %struct.pm2fb_par* %0, %struct.pm2fb_par** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %5

5:                                                ; preds = %11, %2
  %6 = load %struct.pm2fb_par*, %struct.pm2fb_par** %3, align 8
  %7 = load i32, i32* @PM2R_IN_FIFO_SPACE, align 4
  %8 = call i64 @pm2_RD(%struct.pm2fb_par* %6, i32 %7)
  %9 = load i64, i64* %4, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %5
  %12 = call i32 (...) @cpu_relax()
  br label %5

13:                                               ; preds = %5
  ret void
}

declare dso_local i64 @pm2_RD(%struct.pm2fb_par*, i32) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
